@@ -1,4 +1,4 @@
 Tests finished. 52 tests of 52 passed.
 Compiled as DEBUG
-Test suite pass at GMT Sun Jul 11 22:30:34 2010
+Test suite pass at GMT Mon Jul 12 19:54:25 2010
 
